# firestarter-gui

./: .gitignore  README.md  build.bat  index.html  package-lock.json  package.json  resize_square.py  vite.config.ts
src/: App.tsx  api_endpoints.json  index.css  tauriHttp.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src/components/: AccountSection.tsx  AuthManager.tsx  FileDownload.tsx  FileUpload.tsx  GlobalUploadProgressBar.tsx  Links.tsx  List.tsx  Sidebar.tsx  UserLogin.tsx  UserRegistration.tsx  UserSelector.tsx  Wallet.tsx
src/contexts/: AuthContext.tsx  DownloadSelectionContext.tsx  UploadContext.tsx  WalletContext.tsx
src/pages/: AuthPage.tsx  Dashboard.tsx
src/shared/api/: endpoints.ts
