[package]
name = "firestarter"
version = "0.1.0"
description = "Firestarter Storage"
authors = ["Pipe Network"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "firestarter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.7.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
percent-encoding = "2.3"
tauri-plugin-http = "2"
blake3 = "1.5"
dirs = "5.0"
tauri-utils = { version = "2.0.0-rc.13" }
bytes = "1.6"
futures-util = "0.3"
async-stream = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
